# FRDM-KL43Z-Template

./: .gitignore  readme.md
armgcc/: CMakeLists.txt  CMakePresets.json  MKL43Z256xxx4_flash.ld  build_all.sh  build_debug.sh  build_release.sh  clean.sh  mcux_include.json
